# gbifxdl

./: .gitignore  README.md  gbif-bulk-v1.py  gbif-bulk.ipynb  gbif-bulk.py  gbif-ctfb.ipynb  gbif-ctfb.py  gbif-dl.py  gbif-get.py  gbif-noctu.py  gbif-post.py  gbif-sort.py  gbif_cfg.yaml  payload.json  pyproject.toml  test-dl-pr-up-v6.py  test_pyremotedata.ipynb  test_pyremotedata.py
archive/: 20241018_gbif-bulk.py  20241121_gbif-bulk_preprocess_occ.py  20241121_image_transfer.py  Dockerfile  requirements.txt  test-asyncssh.py  test-dl-pr-up-v1.py  test-dl-pr-up-v2.py  test-dl-pr-up-v3.py  test-dl-pr-up-v4.py  test-dl-pr-up-v5.py  test-dl-pr-up.py  test-dl-v1.py  test-dl-v2.py  test-dl.py  test-merge_parquet.py  test-paramiko.py
cleaner/: annotator.py  dataset.py  sftp_params.json
dev/: dev_add_set_column.ipynb  dev_img_cleaner.py  dev_postprocessing.py  dev_preprocessed_occurrences.py  download_all_eu_lepi.py  download_mini_arthropod.py  download_sftp_to_local.py  gbif-bulk.ipynb  gbif_cfg.yaml  img_cleaner.ipynb  img_cleaner_annotator.ipynb  img_cleaner_annotator.py  img_cleaner_dataset_builder.py  img_sorter.py  resize_img.ipynb  test-async-pytorch.py  test-delete.py  test-dl-pr-up-v6.py  test-dl-pr-up-v8-multiprocess.py  test-file_transfer.py
examples/: download_key.txt  example1_post.py  example2_download_occurrence.py  example2_download_occurrences.py  example3_preprocess_occurrences.py  example4_download_images.py  example5_postprocess.py  example_post.py  payload-EU-lepi.json  payload-all-lepi.json  post.py
gbifxdl/: __init__.py  crop_img.py  gbif-bulk.py  gbifxdl.py  run_pipeline.py  run_post.py
usecases/: 00_run_post.py  01_pipeline.py  02_postprocessing.py  03_download_images.py  download_key.txt  payload_DEMO.json  payload_EU_nymph_torti.json  payload_all_lepi.json  payload_traits.json
